Prevent map from overflowing in IE

--- a/sass/_page-properties.scss
+++ b/sass/_page-properties.scss
@@ -268,6 +268,7 @@
     padding-bottom: 56.25%;
     display: block;
     margin-bottom: 15px;
+    overflow: hidden;
     background: url(/img/spinner.gif) no-repeat center;
 
     img {
